Date: 19/11/25
  Major Features:
    - Added item buffs unique to each item, unlocked and upgraded in the Catalog.
        Unlocking and enhancement difficulty is configurable with two new settings, "Item Buff Cost Scale" and "Item Buff Cost Base".
    - Added command /set-item-value so that you can get modded items to show up in random trades, the catalog, and be able to use them in /add-trade.
  Features:
    - Added complementary commands: /import-item-values /export-item-values /remove-item-value /get-item-value
  Sounds:
    - Swapped vanilla title screen music with piano.  Can be disabled in the mod startup settings.
  Minor Features:
    - Added two mod settings, "Default Trade Quality" and "Increment Trade Quality", to control how trade quality bounds are initialized or managed.
  Changes:
    - Mod is now properly marked as a "Space Age Mod" in the mod browser.
    - Removed the irrelevant PvP text in the mod description (until it's actually implemented).
  Locale:
    - Removed the period after the "Trade Productivity" mod settings in the EN locale.
  Modding:
    - Updated Factorio version dependency to prevent crash on pre-2.0.69 versions.
  Bugfixes:
    - Fixed all possible crashes that could be caused by using the wrong value types in commands.
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 15/11/25
  Features:
    - Added several quests. There are now 50 in total.
  Balancing:
    - Added tiered quests for item ranks to fill the progression gap.
    - Replaced the "Catalog Professional" quest with the new, equivalent "First Red Star" quest.
    - Moved the "Catalog Professional" quest to an earlier stage of the game, having easier requirements.
  Gui:
    - Added info tooltip for the quality preview dropdown in the hex core GUI. Removed the relevant clutter.