@@ -545,6 +545,7 @@ command-not-enough-planets=Not enough planets in decoded data. All five Space Ag
 command-some-item-values-invalid=Some of the imported data was of invalid structure. Check Factorio/factorio-current.log for details.
 command-no-item-in-hand=You must be holding an item in your hand when using [color=yellow]in-hand[.color] in commands.
 command-no-character-found=Your character is missing!
+command-confirmation=Repeat the command to confirm. This is a highly destructive action.
 no-room-for-item=No room in inventory to insert __1__. It was dropped on the ground instead.
 rewards-while-away=You've been given quest rewards that were acquired by other players while you weren't playing.
 player-trade-ping=__1__ pinged the trade __2__ in the hex core at __3__
@@ -599,6 +600,7 @@ import-item-values=Import a string that was generated by /export-item-values, re
 get-item-value=See the value of an item on a specific planet. If the item's value is not defined for that planet, it shows the [color=cyan]interplanetary trade[.color] value.
 set-item-value=Assign a new value to an item, allowing it to show up in trades and the catalog.
 remove-item-value=Remove the value of an item, disabling it from showing up in trades and the catalog.
+regenerate-trades=Completely randomize the trades in all hex cores.
 
 
 
